syntax = "proto3";

package player;

service Player {
    rpc Create(CreateRequest) returns (CreateResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Logout(LogoutRequest) returns (LogoutResponse) {}

    rpc GenerateNonce(GenerateNonceRequest) returns (GenerateNonceResponse) {}
    rpc VerifySignature(VerifySignatureRequest) returns (VerifySignatureResponse) {}
    rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse) {}
}

message GenerateNonceRequest {
    string publicAddress = 1;
}

message GenerateNonceResponse {
    string nonce = 1;
}

message VerifySignatureRequest {
    string publicAddress = 1;
    string signature = 2;
}

message VerifySignatureResponse {
    string token = 1;
}

message VerifyTokenRequest {
    string token = 1;
}

message VerifyTokenResponse {
    string publicAddress = 1;
}

message CreateRequest {
    string username = 1;
    string password = 2;
    string sessionId = 3;
}

message CreateResponse {
    string token = 1;
    string sessionId = 2;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    string sessionId = 2;
}

message LogoutRequest {
    string token = 1;
}

message LogoutResponse {
    string message = 1;
}

